@@ -1,6 +1,10 @@
 1.0b8 unreleased
 
-- Correct the check for existance of buildout tarball download
+- Remove restart script. It belongs in the full-stack playbook
+  due to its dependencies on other components.
+  [smcmahon]
+
+- Correct the check for existence of buildout tarball download
   [rockfruit]
 
 - Re-running role does re-run "Run buildout" correctly
